<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SeriesGuide movies</string>
    <string name="description_poster">Movie poster</string>
    <string name="search_hint">Search movies</string>
    <string name="menu_update">Update</string>
    <string name="menu_login">trakt account</string>
    <string name="powered_by_trakt">powered by trakt.tv</string>
    <string name="offline">No network connectivity. Try again later.</string>
    <string name="trakt">trakt</string>
    <string name="getglue">GetGlue</string>
    <string name="imdb">IMDb</string>
    <string name="seen">Seen</string>
    <string name="collect">Collected</string>
    <string name="sending">Sending…</string>
    <string name="update_inprogress">Already updating, try again later.</string>

    <!-- Movie lists -->
    <string name="movies_empty">No movies here.</string>
    <string name="please_setup_trakt">Setup a trakt account to display this list.</string>

    <string-array name="movie_lists">
        <item>Popular</item>
        <item>Top Rated</item>
        <item>Now playing</item>
        <item>Upcoming</item>
        <item>Watchlist</item>
    </string-array>

    <!-- Movie details -->
    <string name="details_empty">No details here.</string>
    <string name="releasedate">Release Date</string>
    <string name="runtime">Runtime</string>
    <string name="timeunit">%s min</string>
    <string name="votes">%s votes</string>
    <string name="actors">Cast</string>
    <string name="cast_as">as</string>
    <string name="crew">Crew</string>
    <string name="addtocalendar">Add to calendar</string>
    <string name="shouts">Shouts</string>
    <string name="trailer">Trailer</string>

    <!-- Check Ins -->
    <string name="checkin">Check In</string>
    <string name="checkin_hint">Type a message (optional)</string>
    <string name="paste">Paste title</string>
    <string name="clear">Clear</string>
    <string name="traktcheckin_inprogress">You are already checked into another movie or episode. Either override the previous checkin or wait %s and try again.</string>
    <string name="traktcheckin_cancel">Override</string>
    <string name="traktcheckin_wait">I\'ll wait</string>
    <string name="checkinsuccess">Checked into %s on GetGlue.</string>
    <string name="checkinfailed">GetGlue Check-in failed. Try disconnecting GetGlue.</string>
    <string name="getglue_authfailed">GetGlue authentication failed. Try again later.</string>
    <string name="oauthmessage">Authenticating to GetGlue</string>

    <!-- Ratings -->
    <plurals name="votes">
        <item quantity="one">%d vote</item>
        <item quantity="other">%d votes</item>
    </plurals>

    <!-- Sharing -->
    <string name="trakt_success">Success with trakt</string>

    <!-- Settings -->
    <string name="pref_traktcredentials">trakt.tv credentials</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="createaccount">Create new account</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="waitplease">A moment, please…</string>
    <string name="trakt_generalerror">Something went wrong. Please check your credentials and try again.</string>

    <!-- Updating -->
    <string name="update_success">Watchlist updated.</string>
    <string name="update_failure">Update failed, try again later.</string>

    <!-- DO NOT TRANSLATE -->
    <string name="notraktrating">--%</string>

</resources>