<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200dp" >

        <ImageView
            android:id="@+id/fanart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/description_poster"
            android:scaleType="centerCrop"
            android:src="@drawable/show_generic" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/fade_black"
            android:padding="@dimen/default_padding"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.XLarge.Light" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_padding"
        android:layout_marginRight="@dimen/large_padding" >

        <LinearLayout
            android:id="@+id/buttonbar"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="@dimen/default_padding"
            android:layout_marginTop="@dimen/default_padding" >

            <Button
                android:id="@+id/checkinButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/checkin" />

        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonbar"
            android:paddingBottom="@dimen/default_padding"
            android:text="@string/details_empty"
            android:textAppearance="@style/TextAppearance" />
			
		<RatingBar
			android:id="@+id/ratingBar"
			style="?android:attr/ratingBarStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:isIndicator="true"
			android:layout_below="@+id/description"
			android:numStars="10"
			android:stepSize="0.1" />
			
		<TextView
            android:id="@+id/votes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ratingBar" />

        <TextView
            android:id="@+id/labelReleaseDate"
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/votes"
            android:text="@string/releasedate" />

        <TextView
            android:id="@+id/releaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelReleaseDate" />

        <TextView
            android:id="@+id/labelRuntime"
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/releaseDate"
            android:text="@string/runtime" />

        <TextView
            android:id="@+id/runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelRuntime" />

        <TextView
            android:id="@+id/labelActors"
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/runtime"
            android:text="@string/actors" />

        <TextView
            android:id="@+id/actors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelActors" />

        <TextView
            android:id="@+id/labelCrew"
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/actors"
            android:text="@string/crew" />

        <TextView
            android:id="@+id/crew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelCrew" />
    </RelativeLayout>

    <include
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inline_padding"
        layout="@layout/holodivider" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/default_padding"
        android:layout_marginRight="@dimen/default_padding"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/buttonIMDB"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/list_selector_holo_dark"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="@dimen/default_padding"
            android:text="@string/imdb"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_medium" >
        </TextView>

        <TextView
            android:id="@+id/buttonTrailer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/list_selector_holo_dark"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="@dimen/default_padding"
            android:text="@string/trailer"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_medium" >
        </TextView>
    </LinearLayout>

</LinearLayout>