<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="150dp" >

            <ImageView
                android:id="@+id/fanart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/description_poster"
                android:scaleType="fitCenter"
                android:src="@drawable/show_generic" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/fade_black"
                android:padding="8dp"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/content"
            style="@style/ScrollingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/traktrating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_padding" >

                <TextView
                    android:id="@+id/traktvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/inline_padding"
                    android:paddingBottom="2dp"
                    android:text="@string/notraktrating"
                    android:textSize="@dimen/text_size_xlarge" />

                <ImageView
                    android:id="@+id/traktlove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/trakt_love_large" />

                <TextView
                    android:id="@+id/traktvotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/inline_padding"
                    android:textSize="@dimen/text_size_xmedium" />
            </LinearLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/traktrating"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>